--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -372,7 +372,25 @@ hr.cleararchive {
 .principal {
   padding: 1em 0;
 }
+.admin-bar{
+  .headernav.fixed{
+    top: 32px;
+  }
+}
+
+@media screen and (max-width: 782px) {
+  .headernav.fixed {
+    top: 46px;
+  }
+}
+
 .headernav {    
+
+  &.fixed{
+    position:fixed;
+  }
+  position: relative;
+  z-index: 9999;
   background: $top-bar-color;
   @include css3(box-shadow, 0px 4px 5px rgba(0,0,0,.25));
   margin-bottom: 30px;
